--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,20 @@
 .mtj.tmp/
 
 # Package Files #
-build\*.jar
-eclipse\asm\*.jar
-eclipse\config\*.jar
-gradle\*.jar
-out\*.jar
-src\*.jar
+build*.jar
+eclipse\asm*.jar
+eclipse\config*.jar
+gradle*.jar
+out*.jar
+src*.jar
 *.war
 *.ear
 
 # Folders #
-eclipse\logs\*
-eclipse\saves\*
-eclipse\resourcepacks\*
-eclipse\crash-reports\*
+eclipse\logs*
+eclipse\saves*
+eclipse\resourcepacks*
+eclipse\crash-reports*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
