--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,21 @@ out/*.jar
 src/*.jar
 *.war
 *.ear
+*.iws
 
 # Folders #
 eclipse/logs/*
 eclipse/saves/*
 eclipse/resourcepacks/*
 eclipse/crash-reports/*
+eclipse/asm/*
+eclipse/config/*
+eclipse/logs
+eclipse/saves
+eclipse/resourcepacks
+eclipse/crash-reports
+eclipse/asm
+eclipse/config
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
