--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ eclipse/config
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+eclipse/usernamecache.json
